--- a/HomeWork.ipynb
+++ b/HomeWork.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 81,
    "metadata": {},
    "outputs": [
     {
@@ -156,11 +156,7 @@
       "12\n",
       "13\n",
       "14\n",
-      "16\n",
-      "17\n",
-      "18\n",
-      "19\n",
-      "21\n"
+      "16\n"
      ]
     }
    ],
@@ -168,9 +164,9 @@
     "# Leiskite pasirinkti skaičių, jeigu įvestas skaičius yra daugiau arba lygus 10, atspausdinkite visus skaičius \n",
     "# kurie dalinasi iš 5 su liekana\n",
     "\n",
-    "Jusu_skaicius = int(input('Irasykite skaiciu: '))+1\n",
+    "Jusu_skaicius = int(input('Irasykite skaiciu: '))\n",
     "if Jusu_skaicius >= 10:\n",
-    "    for jsk in range (0,Jusu_skaicius):\n",
+    "    for jsk in range (0,Jusu_skaicius+1):\n",
     "        if jsk % 5 !=0:\n",
     "            print (jsk)\n",
     "else:\n",
@@ -179,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -197,7 +193,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_12436/3599757843.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrezultatas_1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34mf'saraso ilgis yra {len(rezultatas_1)} kombinaciju'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mrezultatas_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_3164/2854303977.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrezultatas_1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34mf'saraso ilgis yra {len(rezultatas_1)} kombinaciju'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrezultatas_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'str'"
      ]
     }
@@ -213,12 +209,12 @@
     "rezultatas_1 = [[pirmas, antras, trecias] for pirmas in a for antras in b for trecias in c]\n",
     "print (rezultatas_1)\n",
     "print (f'saraso ilgis yra {len(rezultatas_1)} kombinaciju')\n",
-    "rezultatas_1.sort()"
+    "print (rezultatas_1.sort())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -242,6 +238,168 @@
     "            rezultatas_2.append([pirmas, antras, trecias])\n",
     "print (rezultatas_2)\n",
     "print (f'saraso ilgis yra {len(rezultatas_1)} kombinaciju')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[8, 9, 3, 15]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Rasti pasikartojančius elementus tarp dvieju list kintamųjų\n",
+    "\n",
+    "a = [1,2,3,4,5,6,7,8,9,15]\n",
+    "b = [3,8,9,11,15]\n",
+    "\n",
+    "tmp_a = set(a)\n",
+    "tmp_b = set(b)\n",
+    "c = list(tmp_a.intersection(tmp_b))\n",
+    "print (c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{8, 9, 3, 15}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (set(a) & set (b))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "800\n",
+      "1\n",
+      "2\n",
+      "900\n",
+      "5\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Išfiltruoti unikalius teigiamus numeris iš sąrašo\n",
+    "\n",
+    "x = [1, 5, 1, 2, 8, -9, 10, 1, -8, -900, 14, 5, -8, 2, 1, -20, 900, 800, -6, -8, 12, 1]\n",
+    "tmp_x = set(x)\n",
+    "for skaic in tmp_x:\n",
+    "    if skaic > 0:\n",
+    "        print (skaic)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[800, 1, 2, 900, 5, 8, 10, 12, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 5, 1, 2, 8, -9, 10, 1, -8, -900, 14, 5, -8, 2, 1, -20, 900, 800, -6, -8, 12, 1]\n",
+    "tmp_x = set(x)\n",
+    "sar = []\n",
+    "for skaic in tmp_x:\n",
+    "    if skaic > 0:\n",
+    "        sar.append(skaic)\n",
+    "print (sar)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[800, 1, 2, 900, 5, 8, 10, 12, 14]\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 5, 1, 2, 8, -9, 10, 1, -8, -900, 14, 5, -8, 2, 1, -20, 900, 800, -6, -8, 12, 1]\n",
+    "tmp_x = set(x)\n",
+    "rez = [skt for skt in tmp_x if skt >0]\n",
+    "print (rez)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{800, 1, 2, 900, 5, 8, 10, 12, 14}\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [1, 5, 1, 2, 8, -9, 10, 1, -8, -900, 14, 5, -8, 2, 1, -20, 900, 800, -6, -8, 12, 1]\n",
+    "rez = [skt for skt in x if skt >0]\n",
+    "print (set(rez))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'cost_price': 32.67, 'sell_price': 45.0, 'inventory': 1212}\n",
+      "14943.96\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Paskaičiuoti pelną pardavus visas prekes. Informacija apie kainą ir kiekius yra pateikiama kaip dictionary, \n",
+    "# atsakymą suapvalinti iki 2 skaičių po kablelio\n",
+    "\n",
+    "x = { \"cost_price\": 32.67,\n",
+    "\"sell_price\": 45.00,\n",
+    "\"inventory\": 1212 }\n",
+    "\n",
+    "print (x)\n",
+    "pelnas = round((x[\"inventory\"] * x[\"sell_price\"]) - (x[\"inventory\"] * x[\"cost_price\"]), 2)\n",
+    "print (pelnas)\n"
    ]
   }
  ],
