--- a/Working.ipynb
+++ b/Working.ipynb
@@ -4,12 +4,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 01 - string"
+    "# Lesson 01 - String"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 144,
    "metadata": {},
    "outputs": [
     {
@@ -109,12 +109,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Lesson 01 - integer"
+    "# Lesson 01 - integer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 145,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 146,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [
     {
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 148,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [
     {
@@ -226,12 +226,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lesson 01 - Boolean"
+    "# lesson 01 - Boolean"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 150,
    "metadata": {},
    "outputs": [
     {
@@ -259,12 +259,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lesson 02 - List"
+    "# lesson 02 - List"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 151,
    "metadata": {},
    "outputs": [
     {
@@ -290,15 +290,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 152,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "6\n",
-      "['Vaidas', 'Tomas', 'Ieva', 'Tomas', 'Mykolas', 'Mykolas', 'Mykolas']\n"
+      "4\n",
+      "['Vaidas', 'Tomas', 'Ieva', 'Tomas', 'Mykolas']\n"
      ]
     }
    ],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 153,
    "metadata": {},
    "outputs": [
     {
@@ -327,10 +327,497 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 164,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Vaidas', 'Tomas', 'Ieva', 'Tomas', 'Mykolas']\n",
+      "[1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sarasas = [1, 2, 3, 4]\n",
+    "print (sarasas_1)\n",
+    "print (sarasas)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Vaidas', 'Tomas', 'Ieva', 'Tomas', 'Mykolas', 1, 2, 3, 4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "sarasas_3 = sarasas_1 + sarasas\n",
+    "print (sarasas_3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 166,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 166,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sarasas_3.pop()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Ieva', 'Mykolas', 'Tomas', 'Tomas', 'Vaidas']\n",
+      "['Ieva', 'Mykolas', 'Tomas', 'Tomas', 'Vaidas', 1, 2, 3]\n",
+      "2\n",
+      "None\n",
+      "['Mykolas', 'Tomas', 1, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (sarasas_1)\n",
+    "print (sarasas_3)\n",
+    "print (sarasas_3.count('Tomas'))\n",
+    "print (sarasas_1.sort())\n",
+    "print (sarasas_3[1::2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# lesson 02 - Tuple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 188,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, ['3', 4, 5], [6, [7, 8]])\n",
+      "8\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple_1 = (1, 2, ['3', 4, 5], [6, [7, (8)]])\n",
+    "print (tuple_1)\n",
+    "print (tuple_1[-1][-1][-1])\n",
+    "print (tuple_1.index(['3', 4, 5]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 191,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, [222, 33], 44, 55)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple_2 = (11, [222, 33], 44, 55)\n",
+    "print (tuple_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 202,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[11, [222, 22], 44, 55]\n",
+      "[11, [222, 22], 44, 55]\n",
+      "(11, [222, 22], 44, 55)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tmp = list(tuple_2)\n",
+    "print (tmp)\n",
+    "tmp[1] = [222, 22]\n",
+    "print (tmp)\n",
+    "tuple_2 = tuple(tmp)\n",
+    "print (tuple_2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 205,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(11, [222, 22], 44, 55)\n"
+     ]
+    }
+   ],
+   "source": [
+    "tuple_3 = (11, [222, 33], 44, 55)\n",
+    "tuple_3[1][1] = 22\n",
+    "print (tuple_3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# lesson 02 - Range"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 213,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4, 5, 6, 7, 8, 9)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(tuple(range(1,10)))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 215,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for zodis in range(10):\n",
+    "    print (zodis)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# lesson 02 - For loop"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 216,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n"
+     ]
+    }
+   ],
+   "source": [
+    "for skaicius in range(10):\n",
+    "    print (skaicius)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 223,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "4\n",
+      "6\n",
+      "8\n",
+      "10\n",
+      "12\n",
+      "14\n",
+      "16\n",
+      "18\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "sk = int(input(\"Enter the number\"))\n",
+    "for skt in range(11):\n",
+    "    print (sk * skt)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 225,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (sum(range(5)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 234,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pirmadienis', 'Antradienis', 'Treciadienis', 'Ketvirtadienis', 'Penktadienis', 'Sestadienis', 'Sekmadienis']\n",
+      "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+      "[('Pirmadienis', 10), ('Pirmadienis', 11), ('Pirmadienis', 12), ('Pirmadienis', 13), ('Pirmadienis', 14), ('Pirmadienis', 15), ('Pirmadienis', 16), ('Pirmadienis', 17), ('Pirmadienis', 18), ('Pirmadienis', 19), ('Antradienis', 10), ('Antradienis', 11), ('Antradienis', 12), ('Antradienis', 13), ('Antradienis', 14), ('Antradienis', 15), ('Antradienis', 16), ('Antradienis', 17), ('Antradienis', 18), ('Antradienis', 19), ('Treciadienis', 10), ('Treciadienis', 11), ('Treciadienis', 12), ('Treciadienis', 13), ('Treciadienis', 14), ('Treciadienis', 15), ('Treciadienis', 16), ('Treciadienis', 17), ('Treciadienis', 18), ('Treciadienis', 19), ('Ketvirtadienis', 10), ('Ketvirtadienis', 11), ('Ketvirtadienis', 12), ('Ketvirtadienis', 13), ('Ketvirtadienis', 14), ('Ketvirtadienis', 15), ('Ketvirtadienis', 16), ('Ketvirtadienis', 17), ('Ketvirtadienis', 18), ('Ketvirtadienis', 19), ('Penktadienis', 10), ('Penktadienis', 11), ('Penktadienis', 12), ('Penktadienis', 13), ('Penktadienis', 14), ('Penktadienis', 15), ('Penktadienis', 16), ('Penktadienis', 17), ('Penktadienis', 18), ('Penktadienis', 19), ('Sestadienis', 10), ('Sestadienis', 11), ('Sestadienis', 12), ('Sestadienis', 13), ('Sestadienis', 14), ('Sestadienis', 15), ('Sestadienis', 16), ('Sestadienis', 17), ('Sestadienis', 18), ('Sestadienis', 19), ('Sekmadienis', 10), ('Sekmadienis', 11), ('Sekmadienis', 12), ('Sekmadienis', 13), ('Sekmadienis', 14), ('Sekmadienis', 15), ('Sekmadienis', 16), ('Sekmadienis', 17), ('Sekmadienis', 18), ('Sekmadienis', 19)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dienos = ['Pirmadienis', 'Antradienis', 'Treciadienis', 'Ketvirtadienis', 'Penktadienis', 'Sestadienis', 'Sekmadienis']\n",
+    "valandos = [10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+    "print (dienos)\n",
+    "print (valandos)\n",
+    "\n",
+    "kombinacijos = []\n",
+    "for diena in dienos:\n",
+    "    for valanda in valandos:\n",
+    "        kombinacijos.append((diena, valanda))\n",
+    "print (kombinacijos)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# lesson 03 - If"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 238,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "3\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "15\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "for sk20 in range(21):\n",
+    "    if sk20 % 3 == 0:\n",
+    "        print (sk20)\n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 246,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "650\n"
+     ]
+    }
+   ],
+   "source": [
+    "suma50 = 0\n",
+    "for sk50 in range (51):\n",
+    "    if (suma50 + sk50) % 2 == 0:\n",
+    "          suma50 += sk50 \n",
+    "print (suma50)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 248,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "psk = int(input(\"Jusu skaicius\"))\n",
+    "for psk10 in range(0,11):\n",
+    "    if (psk ** 2) % 2 != 0:\n",
+    "        print (psk * psk10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 261,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Pirmadienis', 'Antradienis', 'Treciadienis', 'Ketvirtadienis', 'Penktadienis', 'Sestadienis', 'Sekmadienis']\n",
+      "[10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (dienos)\n",
+    "print (valandos)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 266,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Pirmadienis', 12), ('Pirmadienis', 13), ('Pirmadienis', 14), ('Pirmadienis', 15), ('Pirmadienis', 16), ('Pirmadienis', 17), ('Treciadienis', 12), ('Treciadienis', 13), ('Treciadienis', 14), ('Treciadienis', 15), ('Treciadienis', 16), ('Treciadienis', 17)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "dienos = ['Pirmadienis', 'Antradienis', 'Treciadienis', 'Ketvirtadienis', 'Penktadienis', 'Sestadienis', 'Sekmadienis']\n",
+    "valandos = [10, 11, 12, 13, 14, 15, 16, 17, 18, 19]\n",
+    "\n",
+    "kombinacijos2 = []\n",
+    "\n",
+    "leidziamos_dienos = ['Pirmadienis', 'Treciadienis']\n",
+    "leidziamos_valandos = [12, 13, 14, 15, 16, 17]\n",
+    "for diena in dienos:\n",
+    "    for valanda in valandos:\n",
+    "        if diena in leidziamos_dienos and valanda in leidziamos_valandos:\n",
+    "            kombinacijos2.append((diena, valanda))\n",
+    "print (kombinacijos2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "lesson 03 - list comprehensions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 270,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('Pirmadienis', 12), ('Pirmadienis', 13), ('Pirmadienis', 14), ('Pirmadienis', 15), ('Pirmadienis', 16), ('Pirmadienis', 17), ('Treciadienis', 12), ('Treciadienis', 13), ('Treciadienis', 14), ('Treciadienis', 15), ('Treciadienis', 16), ('Treciadienis', 17)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "kombinacijos2 = [(diena, valanda) for diena in dienos for valanda in valandos if diena in leidziamos_dienos and valanda in leidziamos_valandos]\n",
+    "print (kombinacijos2)"
+   ]
   }
  ],
  "metadata": {
