--- a/Working.ipynb
+++ b/Working.ipynb
@@ -798,7 +798,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "lesson 03 - list comprehensions"
+    "# lesson 03 - list comprehensions"
    ]
   },
   {
@@ -817,6 +817,328 @@
    "source": [
     "kombinacijos2 = [(diena, valanda) for diena in dienos for valanda in valandos if diena in leidziamos_dienos and valanda in leidziamos_valandos]\n",
     "print (kombinacijos2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 03 - Dictionary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "car = {\n",
+    "\"brand\": \"Ford\",\n",
+    "\"model\": \"Mustang\",\n",
+    "\"year\": 1964\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 1964}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ford\n",
+      "3\n",
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 2020}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(car['brand'])\n",
+    "print (len(car))\n",
+    "car['year'] = 2020\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 2020, 'color': 'red', 'used': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "car['color'] = 'red'\n",
+    "car['used'] = True\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'brand': 'Ford', 'model': 'Mustang', 'year': 2020, 'color': 'red', 'used': True}\n",
+      "{'model': 'Mustang', 'year': None, 'color': 'red', 'used': True}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (car)\n",
+    "car.pop('brand')\n",
+    "car['year'] = None\n",
+    "print(car)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 03 - Set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'banana', ('nauja_reiksme', 5), 'cherry'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits ={\"apple\", 'banana', 'cherry'}\n",
+    "fruits.add(('nauja_reiksme', 5))\n",
+    "print (fruits)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'banana', 'cherry'}\n",
+      "{'banana', 'watermelon', 'cherry'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits ={\"apple\", 'banana', 'cherry'}\n",
+    "print (fruits)\n",
+    "fruits.discard('apple')\n",
+    "fruits.add(\"watermelon\")\n",
+    "print (fruits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'apple', 'banana', 'cherry'}\n",
+      "{'apple', 'banana', 'watermelon', 'cherry'}\n",
+      "{'cytrus', 'watermelon', 'cherry', 'strawberry', 'melon', 'blueberry', 'grape', 'banana', 'apple'}\n",
+      "9\n",
+      "{'cytrus', 'watermelon', 'cherry', 'strawberry', 'melon', 'blueberry', 'grape', 'banana', 'apple'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruits ={\"apple\", 'banana', 'cherry'}\n",
+    "print (fruits)\n",
+    "fruits.add('watermelon')\n",
+    "print (fruits)\n",
+    "fruits.update(['grape', 'melon', 'cytrus', 'blueberry', 'strawberry'])\n",
+    "print (fruits)\n",
+    "print (len(fruits))\n",
+    "fruits.add('watermelon')\n",
+    "print (fruits)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[3, 6, -2, -5, 7, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "my_list = [3, 6, -2, -5, 7, 3]\n",
+    "print (my_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21\n"
+     ]
+    }
+   ],
+   "source": [
+    "sandauga = my_list[0] * my_list[1]\n",
+    "for idx in range(1, len(my_list)-1):\n",
+    "    if my_list[idx] * my_list[idx + 1] > sandauga:\n",
+    "        sandauga = my_list[idx] * my_list[idx + 1]\n",
+    "print (sandauga)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['bob', 'savas', 'kompiuteris', 'car', 'song', 'watermelon', 'mouse', 'box', 'cup', 'chocolate']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = ['bob', 'savas', 'kompiuteris', 'car', 'song', 'watermelon', 'mouse', 'box', 'cup', 'chocolate']\n",
+    "print (words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kompiuteris\n",
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "count = 0\n",
+    "for word in words:\n",
+    "    if len(word) > 10:\n",
+    "        count += 1\n",
+    "        print (word)\n",
+    "print (count)\n",
+    "        \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kompiuteris\n",
+      "bob\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (max(words, key=len))\n",
+    "print (min(words, key=len))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "bob\n",
+      "savas\n",
+      "['bob', 'savas']\n"
+     ]
+    }
+   ],
+   "source": [
+    "words = ['bob', 'savas', 'kompiuteris', 'car', 'song', 'watermelon', 'mouse', 'box', 'cup', 'chocolate']\n",
+    "polindromas = []\n",
+    "for word in words:\n",
+    "    if word == word[::-1]:\n",
+    "        print (word)\n",
+    "        polindromas.append(word)\n",
+    "print (polindromas)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "EOL while scanning string literal (Temp/ipykernel_14852/3529259968.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_14852/3529259968.py\"\u001b[1;36m, line \u001b[1;32m1\u001b[0m\n\u001b[1;33m    txt2 = \"pw:\\\\railbaltica-pw.bentley.com:railbaltica-pw-01\\Documents\\Rail Baltica\\Lithuania\\LT_Territorial_Planning_SC\\02_LTGI\\03_Deliverables\\02_Kaunas_Node_SP\\2021.09.28 - VXE016 RB KNS mazgas - A1-A4 alt\\\"\u001b[0m\n\u001b[1;37m                                                                                                                                                                                                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     ]
+    }
+   ],
+   "source": [
+    "txt2 = \"pw:\\\\railbaltica-pw.bentley.com:railbaltica-pw-01\\Documents\\Rail Baltica\\Lithuania\\LT_Territorial_Planning_SC\\02_LTGI\\03_Deliverables\\02_Kaunas_Node_SP\\2021.09.28 - VXE016 RB KNS mazgas - A1-A4 alt\\\"\n",
+    "\n",
+    "print (txt2)"
    ]
   }
  ],
