--- a/HomeWork.ipynb
+++ b/HomeWork.ipynb
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -193,7 +193,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mC:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_3164/2854303977.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrezultatas_1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34mf'saraso ilgis yra {len(rezultatas_1)} kombinaciju'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 11\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mrezultatas_1\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msort\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32mC:\\Users\\VARTOT~1\\AppData\\Local\\Temp/ipykernel_14200/3874794576.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34mf'saraso ilgis yra {len(rezultatas_1)} kombinaciju'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0msorted\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mrezultatas_1\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mkey\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m:\u001b[0m \u001b[0mx\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m2\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'str'"
      ]
     }
@@ -209,7 +209,8 @@
     "rezultatas_1 = [[pirmas, antras, trecias] for pirmas in a for antras in b for trecias in c]\n",
     "print (rezultatas_1)\n",
     "print (f'saraso ilgis yra {len(rezultatas_1)} kombinaciju')\n",
-    "print (rezultatas_1.sort())"
+    "print (rezultatas_1.sort())\n",
+    "print (sorted(rezultatas_1, key=lambda x: x[2]))"
    ]
   },
   {
@@ -242,7 +243,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['1', 'labas', 100], ['1', 'labas', 200], ['1', 'labas', 40], ['1', 'labas', 10], ['1', 'vakaras', 100], ['1', 'vakaras', 200], ['1', 'vakaras', 40], ['1', 'vakaras', 10], ['1', 'kokia grazi diena', 100], ['1', 'kokia grazi diena', 200], ['1', 'kokia grazi diena', 40], ['1', 'kokia grazi diena', 10], ['1', 'siandien uz lango', 100], ['1', 'siandien uz lango', 200], ['1', 'siandien uz lango', 40], ['1', 'siandien uz lango', 10], ['1', '10 laipsniu silumos', 100], ['1', '10 laipsniu silumos', 200], ['1', '10 laipsniu silumos', 40], ['1', '10 laipsniu silumos', 10], ['2', 'labas', 100], ['2', 'labas', 200], ['2', 'labas', 40], ['2', 'labas', 10], ['2', 'vakaras', 100], ['2', 'vakaras', 200], ['2', 'vakaras', 40], ['2', 'vakaras', 10], ['2', 'kokia grazi diena', 100], ['2', 'kokia grazi diena', 200], ['2', 'kokia grazi diena', 40], ['2', 'kokia grazi diena', 10], ['2', 'siandien uz lango', 100], ['2', 'siandien uz lango', 200], ['2', 'siandien uz lango', 40], ['2', 'siandien uz lango', 10], ['2', '10 laipsniu silumos', 100], ['2', '10 laipsniu silumos', 200], ['2', '10 laipsniu silumos', 40], ['2', '10 laipsniu silumos', 10], ['3', 'labas', 100], ['3', 'labas', 200], ['3', 'labas', 40], ['3', 'labas', 10], ['3', 'vakaras', 100], ['3', 'vakaras', 200], ['3', 'vakaras', 40], ['3', 'vakaras', 10], ['3', 'kokia grazi diena', 100], ['3', 'kokia grazi diena', 200], ['3', 'kokia grazi diena', 40], ['3', 'kokia grazi diena', 10], ['3', 'siandien uz lango', 100], ['3', 'siandien uz lango', 200], ['3', 'siandien uz lango', 40], ['3', 'siandien uz lango', 10], ['3', '10 laipsniu silumos', 100], ['3', '10 laipsniu silumos', 200], ['3', '10 laipsniu silumos', 40], ['3', '10 laipsniu silumos', 10], ['4', 'labas', 100], ['4', 'labas', 200], ['4', 'labas', 40], ['4', 'labas', 10], ['4', 'vakaras', 100], ['4', 'vakaras', 200], ['4', 'vakaras', 40], ['4', 'vakaras', 10], ['4', 'kokia grazi diena', 100], ['4', 'kokia grazi diena', 200], ['4', 'kokia grazi diena', 40], ['4', 'kokia grazi diena', 10], ['4', 'siandien uz lango', 100], ['4', 'siandien uz lango', 200], ['4', 'siandien uz lango', 40], ['4', 'siandien uz lango', 10], ['4', '10 laipsniu silumos', 100], ['4', '10 laipsniu silumos', 200], ['4', '10 laipsniu silumos', 40], ['4', '10 laipsniu silumos', 10], ['5', 'labas', 100], ['5', 'labas', 200], ['5', 'labas', 40], ['5', 'labas', 10], ['5', 'vakaras', 100], ['5', 'vakaras', 200], ['5', 'vakaras', 40], ['5', 'vakaras', 10], ['5', 'kokia grazi diena', 100], ['5', 'kokia grazi diena', 200], ['5', 'kokia grazi diena', 40], ['5', 'kokia grazi diena', 10], ['5', 'siandien uz lango', 100], ['5', 'siandien uz lango', 200], ['5', 'siandien uz lango', 40], ['5', 'siandien uz lango', 10], ['5', '10 laipsniu silumos', 100], ['5', '10 laipsniu silumos', 200], ['5', '10 laipsniu silumos', 40], ['5', '10 laipsniu silumos', 10]]\n",
+      "saraso ilgis yra 100 kombinaciju\n",
+      "[['1', 'labas', 10], ['1', 'vakaras', 10], ['1', 'kokia grazi diena', 10], ['1', 'siandien uz lango', 10], ['1', '10 laipsniu silumos', 10], ['2', 'labas', 10], ['2', 'vakaras', 10], ['2', 'kokia grazi diena', 10], ['2', 'siandien uz lango', 10], ['2', '10 laipsniu silumos', 10], ['3', 'labas', 10], ['3', 'vakaras', 10], ['3', 'kokia grazi diena', 10], ['3', 'siandien uz lango', 10], ['3', '10 laipsniu silumos', 10], ['4', 'labas', 10], ['4', 'vakaras', 10], ['4', 'kokia grazi diena', 10], ['4', 'siandien uz lango', 10], ['4', '10 laipsniu silumos', 10], ['5', 'labas', 10], ['5', 'vakaras', 10], ['5', 'kokia grazi diena', 10], ['5', 'siandien uz lango', 10], ['5', '10 laipsniu silumos', 10], ['1', 'labas', 40], ['1', 'vakaras', 40], ['1', 'kokia grazi diena', 40], ['1', 'siandien uz lango', 40], ['1', '10 laipsniu silumos', 40], ['2', 'labas', 40], ['2', 'vakaras', 40], ['2', 'kokia grazi diena', 40], ['2', 'siandien uz lango', 40], ['2', '10 laipsniu silumos', 40], ['3', 'labas', 40], ['3', 'vakaras', 40], ['3', 'kokia grazi diena', 40], ['3', 'siandien uz lango', 40], ['3', '10 laipsniu silumos', 40], ['4', 'labas', 40], ['4', 'vakaras', 40], ['4', 'kokia grazi diena', 40], ['4', 'siandien uz lango', 40], ['4', '10 laipsniu silumos', 40], ['5', 'labas', 40], ['5', 'vakaras', 40], ['5', 'kokia grazi diena', 40], ['5', 'siandien uz lango', 40], ['5', '10 laipsniu silumos', 40], ['1', 'labas', 100], ['1', 'vakaras', 100], ['1', 'kokia grazi diena', 100], ['1', 'siandien uz lango', 100], ['1', '10 laipsniu silumos', 100], ['2', 'labas', 100], ['2', 'vakaras', 100], ['2', 'kokia grazi diena', 100], ['2', 'siandien uz lango', 100], ['2', '10 laipsniu silumos', 100], ['3', 'labas', 100], ['3', 'vakaras', 100], ['3', 'kokia grazi diena', 100], ['3', 'siandien uz lango', 100], ['3', '10 laipsniu silumos', 100], ['4', 'labas', 100], ['4', 'vakaras', 100], ['4', 'kokia grazi diena', 100], ['4', 'siandien uz lango', 100], ['4', '10 laipsniu silumos', 100], ['5', 'labas', 100], ['5', 'vakaras', 100], ['5', 'kokia grazi diena', 100], ['5', 'siandien uz lango', 100], ['5', '10 laipsniu silumos', 100], ['1', 'labas', 200], ['1', 'vakaras', 200], ['1', 'kokia grazi diena', 200], ['1', 'siandien uz lango', 200], ['1', '10 laipsniu silumos', 200], ['2', 'labas', 200], ['2', 'vakaras', 200], ['2', 'kokia grazi diena', 200], ['2', 'siandien uz lango', 200], ['2', '10 laipsniu silumos', 200], ['3', 'labas', 200], ['3', 'vakaras', 200], ['3', 'kokia grazi diena', 200], ['3', 'siandien uz lango', 200], ['3', '10 laipsniu silumos', 200], ['4', 'labas', 200], ['4', 'vakaras', 200], ['4', 'kokia grazi diena', 200], ['4', 'siandien uz lango', 200], ['4', '10 laipsniu silumos', 200], ['5', 'labas', 200], ['5', 'vakaras', 200], ['5', 'kokia grazi diena', 200], ['5', 'siandien uz lango', 200], ['5', '10 laipsniu silumos', 200]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = ['1','2','3','4','5']\n",
+    "b = ['labas', 'vakaras', 'kokia grazi diena', 'siandien uz lango', '10 laipsniu silumos']\n",
+    "c = ['100', '200', 40, 10]\n",
+    "\n",
+    "rezultatas_2 =[]\n",
+    "for pirmas in a:\n",
+    "    for antras in b:\n",
+    "        for trecias in c:\n",
+    "            rezultatas_2.append([pirmas, antras, int(trecias)])\n",
+    "print (rezultatas_2)\n",
+    "print (f'saraso ilgis yra {len(rezultatas_1)} kombinaciju')\n",
+    "print (sorted(rezultatas_2, key=lambda x: x[2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -267,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -279,7 +310,8 @@
     }
    ],
    "source": [
-    "print (set(a) & set (b))"
+    "print (set(a) & set (b))\n",
+    "\n"
    ]
   },
   {
@@ -338,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
