--- a/HomeWork.ipynb
+++ b/HomeWork.ipynb
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -417,7 +417,8 @@
      "output_type": "stream",
      "text": [
       "{'cost_price': 32.67, 'sell_price': 45.0, 'inventory': 1212}\n",
-      "14943.96\n"
+      "14943.96\n",
+      " 14943.96\n"
      ]
     }
    ],
@@ -431,7 +432,11 @@
     "\n",
     "print (x)\n",
     "pelnas = round((x[\"inventory\"] * x[\"sell_price\"]) - (x[\"inventory\"] * x[\"cost_price\"]), 2)\n",
-    "print (pelnas)\n"
+    "print (pelnas)\n",
+    "\n",
+    "# round suapvalina pati skaiciu ir ji issaugo\n",
+    "\n",
+    "print (f\"{pelnas: .2f}\") # atprint'ina suapvalinta, bet paties skaiciaus nekeicia"
    ]
   }
  ],
