--- a/Working.ipynb
+++ b/Working.ipynb
@@ -1140,6 +1140,232 @@
     "\n",
     "print (txt2)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 04 - Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def du_skaiciai(x, y):\n",
+    "    if (x + y) % 2 == 0:\n",
+    "        return x * y\n",
+    "    else:\n",
+    "        return x/y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (du_skaiciai (10, 5))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def pass_funcion ():\n",
+    "    print (\"labas\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "new_funcion_name = pass_funcion"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "labas\n"
+     ]
+    }
+   ],
+   "source": [
+    "new_funcion_name()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def my_funcion_2(*args):\n",
+    "    result_dict = {1:0, 2:0, 3:0, 4:0, 5:0, 6:0, 7:0, 8:0, 9:0, 10:0}\n",
+    "    for number in args:\n",
+    "        for key_numbers in result_dict.keys():\n",
+    "            if number % key_numbers ==0:\n",
+    "                result_dict[key_numbers] +=1\n",
+    "    return (result_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 77,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 4, 2: 2, 3: 1, 4: 0, 5: 2, 6: 1, 7: 0, 8: 0, 9: 0, 10: 1}\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (my_funcion_2(1,2,65,30))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_exercise(list1, list2):\n",
+    "    suma1 = 0\n",
+    "    suma2 = 0\n",
+    "    for sk1 in list1:\n",
+    "        if sk1 >= 10:\n",
+    "            suma1 += sk1\n",
+    "    for sk2 in list2:\n",
+    "        if sk2>=10:\n",
+    "            suma2 += sk2\n",
+    "    return suma1 * suma2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "74016\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (function_exercise([10,9,6,16,15,55,2,7],[20,642,33,76,9,7,2]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_exercise_2(list1, list2):\n",
+    "    list1 = [sk1 for sk1 in list1 if sk1 >= 10]\n",
+    "    print (list1)\n",
+    "    list2 = [sk2 for sk2 in list2 if abs(sk2) >= 10]\n",
+    "    print (list2)\n",
+    "    return sum(list1) * sum(list2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 139,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 16, 15, 55]\n",
+      "[20, 642, 33, 76]\n",
+      "74016\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (function_exercise_2([10,9,6,16,15,55,2,7],[20,642,33,76,9,7,2]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 131,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def function_exercise_3(list1, list2):\n",
+    "    suma1 = []\n",
+    "    suma2 = []\n",
+    "    for sk1 in list1:\n",
+    "        if sk1 >= 10:\n",
+    "            suma1.append(sk1)\n",
+    "    print (suma1)\n",
+    "    for sk2 in list2:\n",
+    "        if sk2>=10:\n",
+    "            suma2.append(sk2)\n",
+    "    print(suma2)\n",
+    "    return sum(suma1) * sum(suma2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10, 16, 15, 55]\n",
+      "[20, 642, 33, 76]\n",
+      "74016\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (function_exercise_3([10,9,6,16,15,55,2,7],[20,642,33,76,9,7,2]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lesson 05 - Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
